# gtest_example

.github/workflows/: build_and_test.yaml
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/awesomeLib/: ButtonDispatcher.h  ConsoleButtonHandler.h  IButtonHandler.h  awesomeHeader.h
lib/src/: ButtonDispatcher.cpp  ConsoleButtonHandler.cpp  awesomeLib.cpp
lib/ut/: CMakeLists.txt  mockedTest.cpp  ut.cpp
